[package]
name = "curl-http"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
description = "A lightweight http client base on curl."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Folyd/curl-http"

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
curl = "0.4.14"
serde = "1.0.77"
serde_json = "1.0.27"